samples/_failures_safe/1761713782_e30491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76c582d9.c: In function ‘print_stats’:
./samples/SAFE/__tmp_76c582d9.c:137:12: error: missing terminating " character
  137 |     printf("Maximum severity:
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_76c582d9.c:137:5: error: expected expression at end of input
  137 |     printf("Maximum severity:
      |     ^~~~~~
./samples/SAFE/__tmp_76c582d9.c:137:5: error: expected declaration or statement at end of input
